# specifications-ITS-REST

./: .gitignore  .redocly.yaml  Dockerfile  LICENSE  README-build.adoc  README.adoc  README.md  apiary.apib  do_uml_generate-spec-ITS-REST.sh  ehr_restapi.html  manifest.json
codegen/oas-ehr/python/: README.md  pyproject.toml  setup.py
codegen/oas-ehr/python/.openapi-generator/: FILES
codegen/oas-ehr/python/docs/: AbstractEntry.md  Action.md  Activity.md  AdminEntry.md  ArchetypeId.md  Archetyped.md  Attestation.md  AuditDetails.md  COMPOSITIONApi.md  CONTRIBUTIONApi.md  CareEntry.md  Clstr.md  CodePhrase.md  Composition.md  ContentItem.md  Contribution.md  DIRECTORYApi.md  DataStructure.md  DataValue.md  DvAmount.md  DvBoolean.md  DvCodedText.md  DvCount.md  DvDate.md  DvDateTime.md  DvDuration.md  DvEhrUri.md  DvEncapsulated.md  DvIdentifier.md  DvInterval.md  DvIntervalOfDateTime.md  DvMultimedia.md  DvOrdered.md  DvOrdinal.md  DvParsable.md  DvProportion.md  DvQuantified.md  DvQuantity.md  DvScale.md  DvState.md  (+61 more)
codegen/oas-ehr/python/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
codegen/oas-ehr/python/test/: test_abstract_entry.py  test_action.py  test_activity.py  test_admin_entry.py  test_archetype_id.py  test_archetyped.py  test_attestation.py  test_audit_details.py  test_care_entry.py  test_clstr.py  test_code_phrase.py  test_composition.py  test_composition_api.py  test_content_item.py  test_contribution.py  test_contribution_api.py  test_data_structure.py  test_data_value.py  test_directory_api.py  (+82 more)
(+7761 files in other folders)
